# Visual-Navigation

./: .gitlab-ci.yml  CMakeLists.txt  README.md  TODO.md  build_submodules.sh
docker/: Dockerfile_18.04  Dockerfile_20.04  Dockerfile_22.04  build.sh  push.sh
exercise_sheets/: .gitignore  Makefile  ref.bib  visnav.sty
include/visnav/: aprilgrid.h  bow_db.h  bow_voc.h  camera_models.h  common_types.h  ex1.h  imudata_load.h  keypoints.h  map_utils.h  matching_utils.h  reprojection.h  vo_utils.h
include/visnav/preintegration_imu/: calib_bias.hpp  imu_types.h  preintegration.h
include/visnav/preintegration_imu/spline/: ceres_spline_helper.h  rd_spline.h  se3_spline.h  so3_spline.h
include/visnav/preintegration_imu/utils/: sophus_utils.hpp
org/doc/: CourseInstructorNotes.md  EmailTemplates.md
org/ss19/: Attendance_template.ods  notes_presentations_niko.txt  practical-courses-ss2019_master-praktikum-visuelle-navigation-in2106-in4174_assignment.csv  practical-courses-ss2019_master-praktikum-visuelle-navigation-in2106-in4174_for_tum_online_assignment.csv  student_machines.txt
org/ws18/: notes_niko_presentations_ws18.txt
org/ws19/: Attendance_template.ods  ExerciseSubmission.ods  participants.csv  practical-courses-ws1920_master-praktikum-visuelle-navigation-in2106-in4174_assignment.csv  practical-courses-ws1920_master-praktikum-visuelle-navigation-in2106-in4174_for_tum_online_assignment.csv  presentation_comments_niko.txt  student_machines.txt
scripts/: strip_solution.sh  update_student_repos.sh  visnav_gitlab.py
scripts/visnav-hook/: .gitignore  .htaccess  hook.sh  rsync.txt  test-token.sh
src/: calibration.cpp  odometry.cpp  sfm.cpp
test/: CMakeLists.txt
test/src/: test_ex3.cpp  test_ex4.cpp  test_ex5.cpp  test_imu_dataloader.cpp  test_imu_preintegration.cpp
tum_benchmark_tools/: aligned_trajectory.txt  associate.py  associations.txt  evaluate_ate.py  gt_trajectory.txt  vio_trajectory.txt  vo_trajectory.txt
wiki/: Setup.md
